# nvdla-ila

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
app/: main.cc
data/: addr_bdma.txt  addr_cacc.txt  addr_cdma.txt  addr_cdp_rdma.txt  addr_cmac_b.txt  addr_glb.txt  addr_mcif.txt  addr_sdp.txt  addr_sramif.txt  license_header.h.in  ping_pong_synch_mech.cc.in  spec_cdp.txt  spec_cmac_a.txt  spec_csc.txt  spec_pdp.txt  spec_pdp_rdma.txt  spec_rubik.txt  spec_sdp_rdma.txt
include/nvdla/: addr_space.h  cbuf.h  cdma.h  conv_pipe.h  csc.h  nvdla_top.h  top.h  utils.h
include/nvdla/configs/: addr_bdma.h  addr_cacc.h  addr_cdma.h  addr_cdp.h  addr_cdp_rdma.h  addr_cmac_a.h  addr_cmac_b.h  addr_csc.h  addr_glb.h  addr_mcif.h  addr_pdp.h  addr_pdp_rdma.h  addr_rubik.h  addr_sdp.h  addr_sdp_rdma.h  addr_space.h  addr_sramif.h  hw_param.h  hw_param_nv_small.h  hw_param_projects.h  modeling_config.h  state_info.h  state_info_bdma.h  state_info_cacc.h  state_info_cdma.h  state_info_cdp.h  state_info_cdp_rdma.h  state_info_cmac_a.h  state_info_cmac_b.h  state_info_csb.h  state_info_csc.h  state_info_glb.h  state_info_mcif.h  state_info_pdp.h  state_info_pdp_rdma.h  state_info_rubik.h  state_info_sdp.h  state_info_sdp_rdma.h  state_info_sramif.h  state_info_top.h
include/nvdla/state_update/: ppsm_bdma.h  ppsm_cacc.h  ppsm_cdma.h  ppsm_cdp.h  ppsm_cdp_rdma.h  ppsm_cmac_a.h  ppsm_cmac_b.h  ppsm_csc.h  ppsm_glb.h  ppsm_mcif.h  ppsm_pdp.h  ppsm_pdp_rdma.h  ppsm_rubik.h  ppsm_sdp.h  ppsm_sdp_rdma.h  ppsm_sramif.h
scripts/: convert_addr.sh  gen_addr_space.py  gen_addr_space.sh  gen_csb_reg_macro.py  gen_csb_reg_macro.sh  gen_ppsm.py  gen_state_define.py  gen_state_define.sh  gen_state_info.py  gen_state_info.sh  gen_state_init.py  gen_state_init.sh  parse_addr_space.py  parse_nvdla_spec.py  run.py
src/: cbuf.cc  cdma.cc  conv_pipe.cc  csc.cc  nvdla_top.cc  top.cc  utils.cc
src/state_define/: state_define_bdma.cc  state_define_cacc.cc  state_define_cdma.cc  state_define_cdp.cc  state_define_cdp_rdma.cc  state_define_cmac_a.cc  state_define_cmac_b.cc  state_define_csb.cc  state_define_csc.cc  state_define_glb.cc  state_define_mcif.cc  state_define_pdp.cc  state_define_pdp_rdma.cc  state_define_rubik.cc  state_define_sdp.cc  state_define_sdp_rdma.cc  state_define_sramif.cc
src/state_init/: state_init_bdma.cc  state_init_cacc.cc  state_init_cdma.cc  state_init_cdp.cc  state_init_cdp_rdma.cc  state_init_cmac_a.cc  state_init_cmac_b.cc  state_init_csb.cc  state_init_csc.cc  state_init_glb.cc  state_init_mcif.cc  state_init_pdp.cc  state_init_pdp_rdma.cc  state_init_rubik.cc  state_init_sdp.cc  state_init_sdp_rdma.cc  state_init_sramif.cc
src/state_update/: ppsm_bdma.cc  ppsm_cacc.cc  ppsm_cdma.cc  ppsm_cdp.cc  ppsm_cdp_rdma.cc  ppsm_cmac_a.cc  ppsm_cmac_b.cc  ppsm_csc.cc  ppsm_glb.cc  ppsm_mcif.cc  ppsm_pdp.cc  ppsm_pdp_rdma.cc  ppsm_rubik.cc  ppsm_sdp.cc  ppsm_sdp_rdma.cc  ppsm_sramif.cc
